VC issuing through VP
